Name: haskell-prob
Version: 0.1

Synopsis: Pedagogical demonstration of probability monads
Author: Risto Saarelma
-- MIT License, close enough hopefully...
License: BSD3
License-File: LICENSE

Cabal-Version: >= 1.2

Executable prob
  Main-Is: Prob.lhs
  Build-Depends: base >= 2.0
  Extensions: GeneralizedNewtypeDeriving
  Ghc-Options: -Wall
